WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280507
[css-anchor-position-1] Declaration referencing invalid anchor should be invalid at computed-value time
https://bugs.webkit.org/show_bug.cgi?id=280507
Summary
[css-anchor-position-1] Declaration referencing invalid anchor should be inva...
Antti Koivisto
Reported
2024-09-27 04:27:32 PDT
https://drafts.csswg.org/css-anchor-position-1/#anchor-valid
If any of these conditions are false, the anchor() function resolves to its specified fallback value. If no fallback value is specified, it makes the declaration referencing it invalid at computed-value time.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-27 04:27:45 PDT
<
rdar://problem/136822454
>
Radar WebKit Bug Importer
Comment 2
2024-09-27 04:28:47 PDT
Comment hidden (obsolete)
<
rdar://problem/136822475
>
Antti Koivisto
Comment 3
2024-09-27 04:45:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34352
EWS
Comment 4
2024-09-27 08:28:43 PDT
Committed
284362@main
(62cb2d15cfc8): <
https://commits.webkit.org/284362@main
> Reviewed commits have been landed. Closing PR #34352 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug