[css-anchor-position-1] Declaration referencing invalid anchor should be invalid at computed-value time https://bugs.webkit.org/show_bug.cgi?id=280507 rdar://problem/136822454

Reviewed by Alan Baradlay.

https://drafts.csswg.org/css-anchor-position-1/#anchor-valid

"If any of these conditions are false, the anchor() function resolves to its specified fallback value.
If no fallback value is specified, it makes the declaration referencing it invalid at computed-value time."

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-invalid-fallback-expected.txt:
* Source/WebCore/css/CSSToLengthConversionData.cpp:
(WebCore::CSSToLengthConversionData::CSSToLengthConversionData):
* Source/WebCore/css/CSSToLengthConversionData.h:
(WebCore::CSSToLengthConversionData::styleBuilderState const):

Make non-const. The anchor code may mutate the builder state.

* Source/WebCore/css/calc/CSSCalcTree+Evaluation.cpp:
(WebCore::CSSCalc::evaluate):

Mark the property invalid at computed-value time if evaluation fails and there is no fallback.

* Source/WebCore/css/calc/CSSCalcTree+Simplification.cpp:
(WebCore::CSSCalc::simplify):

Mark the property invalid at computed-value time if evaluation fails and there is no fallback.

* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::applyProperty):

See if the property has became invalid during applying and apply value 'unset' if so.

(WebCore::Style::Builder::resolveVariableReferences):
(WebCore::Style::Builder::resolveCustomPropertyValue):
* Source/WebCore/style/StyleBuilderState.cpp:
(WebCore::Style::BuilderState::isCurrentPropertyInvalidAtComputedValueTime const):
(WebCore::Style::BuilderState::setCurrentPropertyInvalidAtComputedValueTime):
* Source/WebCore/style/StyleBuilderState.h:

Rename m_inUnitCycleProperties -> m_invalidAtComputedValueTimeProperties since it used in other
cases than unit cycles too.

Canonical link: https://commits.webkit.org/284362@main