Source/WebCore/css/calc/CSSCalcTree+Evaluation.cpp
@@ -32,6 +32,7 @@
 #include "CalculationExecutor.h"
 #include "RenderStyle.h"
 #include "RenderStyleInlines.h"
+#include "StyleBuilderState.h"
 
 namespace WebCore {
 namespace CSSCalc {
@@ -174,11 +175,17 @@ std::optional<double> evaluate(const IndirectNode<Anchor>& anchor, const Evaluat
     if (!options.conversionData || !options.conversionData->styleBuilderState())
         return { };
 
-    auto result = Style::AnchorPositionEvaluator::evaluate(*options.conversionData->styleBuilderState(), *anchor);
+    auto& builderState = *options.conversionData->styleBuilderState();
+
+    auto result = Style::AnchorPositionEvaluator::evaluate(builderState, *anchor);
     if (!result) {
-        // FIXME: Invalid anchor without a valid fallback should make the declaration invalid at computed-value time.
-        if (!anchor->fallback)
+        // https://drafts.csswg.org/css-anchor-position-1/#anchor-valid
+        // "If any of these conditions are false, the anchor() function resolves to its specified fallback value.
+        // If no fallback value is specified, it makes the declaration referencing it invalid at computed-value time."
+        if (!anchor->fallback) {
+            builderState.setCurrentPropertyInvalidAtComputedValueTime();
             return { };
+        }
         return evaluate(*anchor->fallback, options);
     }
 
